Overhaul EIPs to prepare for bomb defusal EIP

--- a/EIPs/EIP-1009.md
+++ b/EIPs/EIP-1009.md
@@ -1,5 +1,5 @@
 <pre>
-  EIP: draft
+  EIP: 1009
   Title: Ethereum Domain Name Service - Specification
   Author: Nick Johnson <arachnid@notdot.net>
   Status: Draft
