--- a/EIPs/ECIP-1010.md
+++ b/EIPs/ECIP-1010.md
@@ -70,12 +70,17 @@ fixed_diff = (pause_block / 100000) - 2 //28
 
 Final formula:
 ````
-n = block.number < pause_block ? 2 : (block.number / 100000) - fixed_diff
-n = block.number >= cont_block ? delay + 2 : n
+if (block.number < pause_block) {
+    explosion = (block.number / 100000) - 2    
+} else if (block.number < cont_block) {
+    explosion = fixed_diff 
+} else { // block.number >= cont_block    
+    explosion = (block.number / 100000) - delay - 2
+}
 
 block_diff = parent_diff 
       + parent_diff / 2048 * max(1 - (block_timestamp - parent_timestamp) / 10, -99) 
-      + int(2**((block.number / 100000) - n))
+      + int(2**explosion)
 ````
 
 With this changes min difficulty value will become:
