--- a/ECIPs/ECIP-1010.md
+++ b/ECIPs/ECIP-1010.md
@@ -3,7 +3,7 @@
     ECIP: 1010
     Title: Delay Difficulty Bomb Explosion
     Author: Igor Artamonov <splix@ethereumclassic.org>
-    Status: Draft
+    Status: Accepted
     Type: Standard
     Created: 2016-09-13
 
