--- a/ECIPs/ECIP-1017.md
+++ b/ECIPs/ECIP-1017.md
@@ -1,22 +1,17 @@
-Title:
+### Title
 
-ECIP: 1017
+    ECIP: 1017
+    Title: Monetary Policy and Final Modification to the Ethereum Classic Emission Schedule
+    Author: Snaproll <[5n4pr011@gmail.com](mailto:5n4pr011@gmail.com)>
+    Status: Draft
+    Type: Standard
+    Created: 2016/11/20
 
-Title: Monetary Policy and Final Modification to the Ethereum Classic Emission Schedule
-
-Author: Snaproll <[5n4pr011@gmail.com](mailto:5n4pr011@gmail.com)>
-
-Status: Draft
-
-Type: Standard
-
-Created: 2016/11/20
-
-**Abstract:**
+### Abstract
 
 This ECIP proposes a solution to the Ethereum Classic Monetary Policy to adjust, with finality, the current emission schedule implementation of 14.0625ETC per block, in perpetuity. The solution proposed introduces a theoretical upper bound on the maximum absolute number of ETC and introduces a method of degraded emission over time. In addition, this ECIP describes the requirements associated with maintaining this emission schedule through a potential change of the network’s consensus algorithm, from its current Ethash based Proof of Work to a possible POS or POW/POS hybrid model.
 
-**Motivation:**
+### Motivation
 
 **[Sourc**e](https://docs.google.com/spreadsheets/d/1Fs_RNEPSRJxP22PZmwxWjiulVVcu5Ic1GvBXCPCt9to/edit?usp=sharing)
 
@@ -30,7 +25,7 @@ Especially important to early stage cryptocurrencies, assuming all other variabl
 
 Above all, it is important to recognize that a monetary policy does not directly create value for the network. A stable platform with useful applications and a vibrant community are the variables that drive value. The purpose of a properly structured monetary policy is to create an incentive for people to take a risk on a system that has not yet reached its full potential, providing an additional reason for those who may not otherwise be interested, who cannot or have not developed anything on the platform (yet), or who remain skeptical, to involve themselves in an otherwise nascent platform. 
 
-**Specification:**
+### Specification
 
 Current Ethereum Classic Monetary Policy
 
@@ -106,7 +101,7 @@ In the scenario where the network moves to a POW/POS hybrid model, the upper bou
 
 Additionally, an adjustment by this hybrid model is required to deprecate the rate of emission per Era of time. This Era of time is set at  the equivalent of the proposed emission rate of 5,000,000 blocks and assumes a time of 15s between blocks. So by the equivalent of block 10,000,000, the new model is to reduce its emission rate by 20%, and will continue this 20% every 5,000,000 blocks or equivalent in time, in perpetuity. 
 
-**Rationale:**
+### Rationale
 
 Why this 5M20 model:
 
@@ -128,7 +123,7 @@ Why this 5M20 model:
 
 * The model is the best attempt at balancing the needs to incentive high risk investment into the system in order to bootstrap security and create a potential user base, be easy to understand, include a reduction to the rate of production of ETC over time, include an upper bound on supply, and also provide for a long term production of the ETC token.
 
-**Implementation: **
+### Implementation
 
 *Timeline for the implementation and the code required to execute. *
 
