--- a/ECIPs/ECIP-1017.md
+++ b/ECIPs/ECIP-1017.md
@@ -41,13 +41,13 @@ The current mining rewards on the Ethereum Classic Network are as follows:
 
 * This reward structure is set to continue in perpetuity.
 
-Proposed Ethereum Classic Monetary Policy
+####Proposed Ethereum Classic Monetary Policy
 
 [Source](https://docs.google.com/spreadsheets/d/1Fs_RNEPSRJxP22PZmwxWjiulVVcu5Ic1GvBXCPCt9to/edit?usp=sharing)
 
 ![image alt text](image_1.png)
 
-* *An "Era" is defined as the number of blocks containing a given production rate.*
+*An "Era" is defined as the number of blocks containing a given production rate.*
 
 The proposed mining rewards on the Ethereum Classic Network are as follows:
 
@@ -75,7 +75,7 @@ The proposed mining rewards on the Ethereum Classic Network are as follows:
 
     * Every Era will last for 5,000,000 blocks. 
 
-Maintenance of the Economic Policy through a transition of the network consensus algorithm.** **
+####Maintenance of the Economic Policy through a transition of the network consensus algorithm.** **
 
 Should the Ethereum Classic Network decide to change its consensus algorithm to a model other than the current Ethash based POW implementation, the following requirements will be adhered to ensure the finality of the implemented Monetary Policy:
 
@@ -123,5 +123,5 @@ Why this 5M20 model:
 
 ### Implementation
 
-*Timeline for the implementation and the code required to execute. *
+*Timeline for the implementation and the code required to execute.*
 
