--- a/ECIPs/ECIP-1017.md
+++ b/ECIPs/ECIP-1017.md
@@ -6,10 +6,14 @@
     Status: Draft
     Type: Standard
     Created: 2016/11/20
+    
+<br />
 
 ### Abstract
 
 This ECIP proposes a solution to the Ethereum Classic Monetary Policy to adjust, with finality, the current emission schedule implementation of 14.0625ETC per block, in perpetuity. The solution proposed introduces a theoretical upper bound on the maximum absolute number of ETC and introduces a method of degraded emission over time. In addition, this ECIP describes the requirements associated with maintaining this emission schedule through a potential change of the network’s consensus algorithm, from its current Ethash based Proof of Work to a possible POS or POW/POS hybrid model.
+
+<br />
 
 ### Motivation
 
@@ -22,6 +26,8 @@ Large scale, high risk, and/or high profile applications will be less likely to 
 Especially important to early stage cryptocurrencies, assuming all other variables are equal, a network with a decreasing rate of production and an upper bound on the number of tokens that will be issued will provide more incentive for high risk speculation to occur than one without a known rate of production or upper bound. 
 
 Above all, it is important to recognize that a monetary policy does not directly create value for the network. A stable platform with useful applications and a vibrant community are the variables that drive value. The purpose of a properly structured monetary policy is to create an incentive for people to take a risk on a system that has not yet reached its full potential, providing an additional reason for those who may not otherwise be interested, who cannot or have not developed anything on the platform (yet), or who remain skeptical, to involve themselves in an otherwise nascent platform. 
+
+<br />
 
 ### Specification
 
@@ -40,6 +46,8 @@ The current mining rewards on the Ethereum Classic Network are as follows:
 * A reward of 7/8 (4.375ETC) of the winning block reward for a miner who has mined an uncled block and has that uncle included in the winning block by the winning miner, up to a maximum of two (2) uncles included in a winning block.
 
 * This reward structure is set to continue in perpetuity.
+
+<br />
 
 ####Proposed Ethereum Classic Monetary Policy
 
@@ -74,8 +82,10 @@ The proposed mining rewards on the Ethereum Classic Network are as follows:
     * All rewards will be reduced at a constant rate of 20% upon entering a new Era. 
 
     * Every Era will last for 5,000,000 blocks. 
+    
+<br />
 
-####Maintenance of the Economic Policy through a transition of the network consensus algorithm.** **
+####Maintenance of the Economic Policy through a transition of the network consensus algorithm.
 
 Should the Ethereum Classic Network decide to change its consensus algorithm to a model other than the current Ethash based POW implementation, the following requirements will be adhered to ensure the finality of the implemented Monetary Policy:
 
@@ -99,6 +109,8 @@ In the scenario where the network moves to a POW/POS hybrid model, the upper bou
 
 Additionally, an adjustment by this hybrid model is required to deprecate the rate of emission per Era of time. This Era of time is set at  the equivalent of the proposed emission rate of 5,000,000 blocks and assumes a time of 15s between blocks. So by the equivalent of block 10,000,000, the new model is to reduce its emission rate by 20%, and will continue this 20% every 5,000,000 blocks or equivalent in time, in perpetuity. 
 
+<br />
+
 ### Rationale
 
 Why this 5M20 model:
@@ -120,6 +132,8 @@ Why this 5M20 model:
 * Because the rate at which uncled blocks can vary with extreme, reducing the reward for uncle blocks assists considerably with being able to forecast the true upper bound of the total ETC that will ultimately exist in the system. 
 
 * The model is the best attempt at balancing the needs to incentive high risk investment into the system in order to bootstrap security and create a potential user base, be easy to understand, include a reduction to the rate of production of ETC over time, include an upper bound on supply, and also provide for a long term production of the ETC token.
+
+<br />
 
 ### Implementation
 
