--- a/ECIPs/ECIP-1017.md
+++ b/ECIPs/ECIP-1017.md
@@ -85,7 +85,7 @@ The proposed mining rewards on the Ethereum Classic Network are as follows:
     
 <br />
 
-####Maintenance of the Economic Policy through a transition of the network consensus algorithm.
+####Maintenance of the Economic Policy Through a Transition of the Network Consensus Algorithm
 
 Should the Ethereum Classic Network decide to change its consensus algorithm to a model other than the current Ethash based POW implementation, the following requirements will be adhered to ensure the finality of the implemented Monetary Policy:
 
