--- a/ECIPs/ECIP-1017.md
+++ b/ECIPs/ECIP-1017.md
@@ -35,7 +35,7 @@ Above all, it is important to recognize that a monetary policy does not directly
 
 [Source](http://ethdocs.org/en/latest/mining.html)
 
-![image alt text](image_0.png)
+![image alt text](ETC_MP_Perpetual.png)
 
 The current mining rewards on the Ethereum Classic Network are as follows:
 
@@ -53,7 +53,7 @@ The current mining rewards on the Ethereum Classic Network are as follows:
 
 [Source](https://docs.google.com/spreadsheets/d/1Fs_RNEPSRJxP22PZmwxWjiulVVcu5Ic1GvBXCPCt9to/edit?usp=sharing)
 
-![image alt text](image_1.png)
+![image alt text](ETC_MP_5M20.png)
 
 *An "Era" is defined as the number of blocks containing a given production rate.*
 
