--- a/ECIPs/ECIP-1017.md
+++ b/ECIPs/ECIP-1017.md
@@ -2,7 +2,7 @@
 
     ECIP: 1017
     Title: Monetary Policy and Final Modification to the Ethereum Classic Emission Schedule
-    Author: Snaproll <[5n4pr011@gmail.com](mailto:5n4pr011@gmail.com)>
+    Author: Matthew Mazur <[5n4pr011@gmail.com](mailto:5n4pr011@gmail.com)>
     Status: Draft
     Type: Standard
     Created: 2016/11/20
