--- a/ECIPs/ECIP-1018.md
+++ b/ECIPs/ECIP-1018.md
@@ -1,7 +1,7 @@
 ### Title
 
-    ECIP: 1017
-    Title: Correct References To SHA3 Which Should Be Keccak-256
+    ECIP: 1018
+    Title: Rename SHA3 References To Keccak-256
     Author: Christian Seberino <christian.seberino@iohk.io>
     Status: Draft
     Type: Standard
@@ -9,36 +9,33 @@
 
 ### Abstract
 
-Due to the SHA3 parameter controversy involving late changes to the standard,
-and even later backpedaling of those changes, Ethereum and Ethereum Classic
+Due to the [SHA3 parameter controversy](https://steemit.com/etc/@cseberino/why-ethereum-classic-uses-an-incorrect-sha3-implementation), Ethereum and Ethereum Classic
 ended up using a similar but different hash function from the Keccak family that
 is today referred to as Keccak-256.  There are several places where the
 Keccak-256 is incorrectly referred to as SHA3 which will continue to cause
-confusion until it is addressed.  As a simple start, I am proposing an alias to
-sha3 of keccak256.  This will have the added benefit of being
-inline with corresponding Ethereum Improvement Proposals such as EIP-59.
+confusion until this is addressed.  As a start, I am proposing a keccak256 alias addition to the JSONRPC library.  
+This will have the added benefit of being in agreement with recent Ethereum Solidity corrections and Ethereum Improvement Proposals such as EIP-59.
 
 ### Motivation
 
-Accuracy is vital to good software.  Incorrectness will only lead to problems.
-Ignoring this error will lead to neverending ongoing confusion in both Ethereum
-and Ethereum Classic such as
+Ignoring this error will lead to ongoing confusion in both Ethereum
+and Ethereum Classic communities such as
 [here](http://ethereum.stackexchange.com/questions/559/why-arent-solidity-sha3-hashes-not-matching-what-other-sha3-libraries-produce).
 
 ### Specification
 
-Probably the most visible error involving this issue is in the JSONRPC web3
-module.  An alias of web3_keccak256 to web3_sha3 would be an easy
-hugely beneficial start.  Deprecation warnings could eventually be added to
-web3_sha3 with eventual removal from the standard.
+A keccak256 alias to JSONRPC web3 module would be an easy yet
+hugely beneficial start.  Deprecation warnings could eventually be added to 
+references for later removal.
 
 ### Rationale
 
-This problem will not go away.  Ethereum is already taking steps to address this
-and there is no reason to stay incorrect in Ethereum Classic.
+Ethereum is already taking steps to address this
+and there is no reason for Ethereum Classic references to remain incorrect.
 [Solidity 0.4.3](https://media.readthedocs.org/pdf/solidity/stable/solidity.pdf)
-for Ethereum introduced the keccak256 alias for sha3.
+for Ethereum introduced the keccak256 alias already and this would bring Ethereum Classic
+in agreement with that addition.
 
 ### Implementation
 
-N
+
