--- a/ECIPs/ECIP-1018.md
+++ b/ECIPs/ECIP-1018.md
@@ -13,8 +13,7 @@ Due to the [SHA3 parameter controversy](https://steemit.com/etc/@cseberino/why-e
 ended up using a similar but different hash function from the Keccak family that
 is today referred to as Keccak-256.  There are several places where the
 Keccak-256 is incorrectly referred to as SHA3 which will continue to cause
-confusion until this is addressed.  As a start, I am proposing a keccak256 alias addition to the JSONRPC library.  
-This will have the added benefit of being in agreement with recent Ethereum Solidity corrections and Ethereum Improvement Proposals such as EIP-59.
+confusion until this is addressed.  As a start, I am proposing a keccak256 alias addition to the JSONRPC library.  This will have the added benefit of being in agreement with recent Ethereum Solidity corrections and Ethereum Improvement Proposals such as EIP-59.
 
 ### Motivation
 
@@ -24,15 +23,15 @@ and Ethereum Classic communities such as
 
 ### Specification
 
-A keccak256 alias to JSONRPC web3 module would be an easy yet
-hugely beneficial start.  Deprecation warnings could eventually be added to 
+A keccak256 alias to the JSONRPC web3 module would be an easy yet
+hugely beneficial start.  Deprecation warnings could eventually be added to SHA3 
 references for later removal.
 
 ### Rationale
 
 Ethereum is already taking steps to address this
 and there is no reason for Ethereum Classic references to remain incorrect.
-[Solidity 0.4.3](https://media.readthedocs.org/pdf/solidity/stable/solidity.pdf)
+[Solidity 0.4.3](https://github.com/ethereum/solidity/releases/tag/v0.4.3)
 for Ethereum introduced the keccak256 alias already and this would bring Ethereum Classic
 in agreement with that addition.
 
