--- a/ECIPs/ECIP-1017.md
+++ b/ECIPs/ECIP-1017.md
@@ -3,7 +3,7 @@
     ECIP: 1017
     Title: Monetary Policy and Final Modification to the Ethereum Classic Emission Schedule
     Author: Matthew Mazur <5n4pr011@gmail.com>
-    Status: Draft
+    Status: Final
     Type: Standard
     Created: 2016/11/20
     
@@ -106,10 +106,3 @@ Why this 5M20 model:
 * Because the rate at which uncled blocks can vary with extreme, reducing the reward for uncle blocks assists considerably with being able to forecast the true upper bound of the total ETC that will ultimately exist in the system. 
 
 * The model is the best attempt at balancing the needs to incentivize high risk investment into the system in order to bootstrap security and create a potential user base, be easy to understand, include a reduction to the rate of production of ETC over time, include an upper bound on supply, provide for a long term production of the ETC token, and allow enough time for development, adoption, and awareness. 
-
-<br />
-
-### Implementation
-
-*Timeline for the implementation and the code required to execute.*
-
