--- a/ECIPs/ECIP_1021.md
+++ b/ECIPs/ECIP_1021.md
@@ -5,23 +5,24 @@ Status: Draft
 Type: ERC
 Created: 5-03.2017
 Resolution: https://github.com/Dexaran/ERC23-tokens
-Abstract
+
+#Abstract
 
 The following describes standard functions a token contract and contract working with specified token can implement.
 
-Motivation
+#Motivation
 
 Those will allow dapps and wallets to handle incoming token transactions and prevent accidentally sent tokens from being accepted by wrong contracts.
 For example decentralized exchange will no more need to force users to call approve at token contract then call deposit that is calling transferFrom taking allowed tokens. Token transaction will automatically be handled inside the exchange contract.
 
 The most important here are, transferToContract and fallbackToken.
 
-Specification
+#Specification
 
 Token
 Contracts that work with tokens
 
-Methods
+#Methods
 
 NOTE: An important point is that contract developers should handle fallbackToken like fallback() for ether transactions if they wish their contracts to work with specified tokens. Token senders should understand if they are sending tokens to address or to contract.
 
