--- a/ECIPs/ECIP_1021.md
+++ b/ECIPs/ECIP_1021.md
@@ -1,4 +1,4 @@
-#Title
+###Title
 
  ECIP: 1021
  ERC: 23
@@ -9,7 +9,7 @@
  Created: 5-03.2017
  Resolution: https://github.com/Dexaran/ERC23-tokens
 
-#Abstract
+###Abstract
 
 The following describes standard functions a token contract and contract working with specified token can implement.
 
