--- a/ECIPs/ECIP_1021.md
+++ b/ECIPs/ECIP_1021.md
@@ -6,8 +6,9 @@ Title: Token standard
 Author: Dexaran, dexaran820@gmail.com
 Status: Draft
 Type: ERC
-Created: 5-03.2017
+Created: 7-03.2017
 Resolution: https://github.com/Dexaran/ERC23-tokens
+EIP #223: https://github.com/ethereum/EIPs/issues/223
 
 ###Abstract
 
