--- a/ECIPs/ECIP_1021.md
+++ b/ECIPs/ECIP_1021.md
@@ -1,14 +1,13 @@
-###Title
-   ECIP: 1021
-   ERC: 23
-   Title: Token standard
-   Author: Dexaran, dexaran820@gmail.com
-   Status: Draft
-   Type: ERC
-   Created: 7-03.2017
-   Resolution: https://github.com/Dexaran/ERC23-tokens
-   [EIP #223 on Ethereum project] (https://github.com/ethereum/EIPs/issues/223)
-
+##Title
+ECIP: 1021
+ERC: 23
+Title: Token standard
+Author: Dexaran, dexaran820@gmail.com
+Status: Draft
+Type: ERC
+Created: 7-03.2017
+Resolution: https://github.com/Dexaran/ERC23-tokens
+[EIP #223 on Ethereum project] (https://github.com/ethereum/EIPs/issues/223)
 ###Abstract
 
 The following describes standard functions a token contract and contract working with specified token can implement.
