--- a/ECIPs/ECIP_1021.md
+++ b/ECIPs/ECIP_1021.md
@@ -19,7 +19,7 @@ The following describes standard functions a token contract and contract working
 Those will allow dapps and wallets to handle incoming token transactions and prevent accidentally sent tokens from being accepted by wrong contracts.
 For example decentralized exchange will no more need to force users to call approve at token contract then call deposit that is calling transferFrom taking allowed tokens. Token transaction will automatically be handled inside the exchange contract.
 
-The most important here are, transferToContract and fallbackToken.
+The most important here are, `transferToContract` and `fallbackToken`.
 
 ###Specification
 
