--- a/ECIPs/ECIP_1021.md
+++ b/ECIPs/ECIP_1021.md
@@ -30,22 +30,22 @@ Contracts that work with tokens
 
 NOTE: An important point is that contract developers should handle fallbackToken like fallback() for ether transactions if they wish their contracts to work with specified tokens. Token senders should understand if they are sending tokens to address or to contract.
 
-transferToContract
+`transferToContract`
 
-function transferToContract(address _to, uint _value) returns (bool success)
-transfers tokens from msg.sender to _to then trying to call fallbackToken(msg.sender, _value) at _to. If _to is not a contract or no fallbackToken is specified or _to is not supporting transfered tokens transaction fails and tokens will not be sent.
+function `transferToContract(address _to, uint _value) returns (bool success)`
+transfers tokens from `msg.sender` to `_to` then trying to call `fallbackToken(msg.sender, _value)` at `_to`. If `_to` is not a contract or no `fallbackToken` is specified or `_to` is not supporting transfered tokens transaction fails and tokens will not be sent.
 
 Contract to work with tokens
 
-supportedTokens
+`supportedTokens`
 
-mapping (address => bool) supportedTokens;
+`mapping (address => bool) supportedTokens;`
 Mapping of addresses of token contracts that are supported.
 
-addToken
+`addToken`
 
-function addToken(address _token) onlyOwner
+function `addToken(address _token) onlyOwner`
 Adds a token contract address to work with.
 
-function fallbackToken(address _from, uint _value)
-A function to handle token transfers that is called from token contract when token holder is sending tokens. _from is a token holder and _value is amount of incoming tokens. Works like fallback function for Ether transactions.
+`function fallbackToken(address _from, uint _value)`
+A function to handle token transfers that is called from token contract when token holder is sending tokens. `_from` is a token holder and `_value` is amount of incoming tokens. Works like fallback function for Ether transactions.
