--- a/ECIPs/ECIP_1021.md
+++ b/ECIPs/ECIP_1021.md
@@ -35,12 +35,12 @@ NOTE: An important point is that contract developers should handle fallbackToken
 function `transferToContract(address _to, uint _value) returns (bool success)`
 transfers tokens from `msg.sender` to `_to` then trying to call `fallbackToken(msg.sender, _value)` at `_to`. If `_to` is not a contract or no `fallbackToken` is specified or `_to` is not supporting transfered tokens transaction fails and tokens will not be sent.
 
-Contract to work with tokens
+###Contract that is working with tokens
 
 `supportedTokens`
 
 `mapping (address => bool) supportedTokens;`
-Mapping of addresses of token contracts that are supported.
+ Mapping of addresses of token contracts that are supported.
 
 `addToken`
 
