--- a/ECIPs/ECIP_1021.md
+++ b/ECIPs/ECIP_1021.md
@@ -8,7 +8,8 @@
     Type: ERC
     Created: 7-03.2017
     Resolution: https://github.com/Dexaran/ERC23-tokens
-    [EIP #223 on Ethereum project] (https://github.com/ethereum/EIPs/issues/223)
+    
+    EIP #223 on Ethereum project: https://github.com/ethereum/EIPs/issues/223
    
 ###Abstract
 
