--- a/ECIPs/ECIP_1021.md
+++ b/ECIPs/ECIP_1021.md
@@ -34,6 +34,7 @@ Contracts that work with tokens
 
 NOTE: An important point is that contract developers should handle `fallbackToken` like fallback for ether transactions if they wish their contracts to work with specified tokens.
 
+## Token contract methods
 isContract
 
 `function isContract(address _addr) private returns (bool is_contract)`
