ECIP-1030: clarify SYSTEM transaction invalidity as user-executed transactions

--- a/ECIPs/ECIP-1030.md
+++ b/ECIPs/ECIP-1030.md
@@ -38,3 +38,4 @@ This ECIP has been implemented in SputnikVM (https://github.com/ethereumproject/
 
 * `gas_price` and `gas_limit` is still a variable in a SYSTEM transaction because different `gas_limit` can result in different execution results, and `gas_price` can be queryed in EVM.
 * EIP96 (https://github.com/ethereum/EIPs/pull/210), using its BLOCKHASH handled as a SYSTEM transaction, has the unsettled issue that whether the call executed by "SUPERUSER" is included in `transactions_root`. It is recommended NOT to include it as to keep it compatible with this ECIP.
+* Not having a `from` address in all SYSTEM transactions makes sure that they will never be considered valid user-executed transactions.
