ECIP-1030: fix typos

--- a/ECIPs/ECIP-1030.md
+++ b/ECIPs/ECIP-1030.md
@@ -22,7 +22,7 @@ A SYSTEM transaction MUST NOT have a `from` address. Thus it MUST NOT cost any a
 
 A SYSTEM transaction can only be executed as a top-level transaction in a block. In other words, EVM's `CALL`, `CREATE`, `CALLCODE`, or `DELEGATECALL` opcodes MUST NOT execute a SYSTEM transaction.
 
-A SYSTEM transaction MAY NOT be included in the block's `transactions_root`. `transactions_root` currently is used to only include user-executed transactions. (Block reward transaction, the only SYSTEM transaction we have right now, is not included in `transactions_root`. So keeping the current semantics would be preferred.) It is considered to be enforced by the block validity rules, and the rules SHOULD contain enough information about details of all SYSTEM transactions to be executed, and when (before or after user-executed transactions).
+A SYSTEM transaction MAY NOT be included in the block's `transactions_root`. `transactions_root` currently is used to only include user-executed transactions. (Block reward transaction, the only SYSTEM transaction we have right now, is not included in `transactions_root`. So keeping the current semantics would be preferred.) It is considered to be enforced by the block validity rules, and the rules SHOULD contain enough information about details of all SYSTEM transactions to be executed, and when (before or after user-executed transactions, and the order of all SYSTEM transactions to be executed).
 
 ### Block Rewards SYSTEM Transaction
 
@@ -30,11 +30,11 @@ The current block rewards can be considered as a SYSTEM transaction. Note that u
 
 This SYSTEM transaction would have its `gas_price` set to 0, and `gas_limit` set to 21000. It has the `to` address set to the block miners, and the value set to 5 ETC. The `data` for this transaction is empty.
 
-### Implementation
+### Implementations
 
 This ECIP has been implemented in SputnikVM (https://github.com/ethereumproject/sputnikvm/pull/251).
 
-### Discussion and Concerns
+### Discussions and Concerns
 
 * `gas_price` and `gas_limit` is still a variable in a SYSTEM transaction because different `gas_limit` can result in different execution results, and `gas_price` can be queryed in EVM.
 * EIP96 (https://github.com/ethereum/EIPs/pull/210), using its BLOCKHASH handled as a SYSTEM transaction, has the unsettled issue that whether the call executed by "SUPERUSER" is included in `transactions_root`. It is recommended NOT to include it as to keep it compatible with this ECIP.
