Define division as floor divide

--- a/ECIPs/ECIP-1039.md
+++ b/ECIPs/ECIP-1039.md
@@ -29,6 +29,9 @@ The content of the proposal deals exclusively with reward calculation beginning 
 
 # Solution
 
+### Definitions
+
+- In this document, the mathematic and code symbol `/` should be understood as a "floor divide," and any fractions using `/` (_eg._ `1/32`) should _not_ be interpreted as floating points.
 
 ### __Block winner reward calculation.__
 
@@ -75,7 +78,7 @@ for (era in eras) {
 _eg._
 ```
 blockWinnerReward = blockWinnerRewardAtEra(n) # Block winner reward rounds down once prior to division
-uncleInclusionReward = floor(1/32 * blockWinnerReward) # Block uncle inclusion reward rounds down per uncle
+uncleInclusionReward = blockWinnerReward / 32 # Block uncle inclusion reward rounds down per uncle
 ```
 
 And then either:
