improve ECIP-1041 structure

--- a/ECIPs/ECIP-1041.md
+++ b/ECIPs/ECIP-1041.md
@@ -1,3 +1,12 @@
+### Title
+
+    ECIP: 1041
+    Title: Remove Difficulty Bomb
+    Author: Igor Artamonov <splix@etcdevteam.com>
+    Status: Accepted
+    Type: Standard
+    Created: 2018-01-10
+    
 # ECIP 1041 - Remove Difficulty Bomb
 
 ## Abstract 
