Basic formatting and setup for ECIPs

--- a/ECIPs/ECIP-1010.md
+++ b/ECIPs/ECIP-1010.md
@@ -1,11 +1,12 @@
-### Title
-
-    ECIP: 1010
-    Title: Delay Difficulty Bomb Explosion
-    Author: Igor Artamonov <splix@ethereumclassic.org>
-    Status: Final
-    Type: Standard
-    Created: 2016-09-13
+---
+layout: ecip
+ecip: 1010
+title: Delay Difficulty Bomb Explosion
+author: Igor Artamonov <splix@ethereumclassic.org>
+status: Final
+type: Standard
+created: 2016-09-13
+---
 
 ### Abstract
 This ECIP describes the details of delaying Difficulty Bomb growth for one year. It’s suggested to change Difficulty Bomb formula to stop growing for period of time from January 2017 to December 2017, which is around blocks 3,000,000 and 5,000,000 accordingly.
