--- a/ECIPs/ECIP-1048.md
+++ b/ECIPs/ECIP-1048.md
@@ -1,12 +1,14 @@
-## Clique proof-of-authority consensus protocol
-
-    ECIP: 1048
-    Title: Clique proof-of-authority consensus protocol
-    Author: Péter Szilágyi <peterke@gmail.com>
-    Discussions-To: https://github.com/ethereum/EIPs/issues/225
-    Status: Draft
-    Type: Informational
-    Created: 2017-03-06
+---
+layout: ecip
+ecip: 1048
+title: Clique proof-of-authority consensus protocol
+author: Péter Szilágyi <peterke@gmail.com>
+discussions-to: https://github.com/ethereum/EIPs/issues/225
+status: Draft
+type: Informational
+created: 2017-03-06
+nav_exclude: true
+---
 
 ## Abstract
 
@@ -189,6 +191,7 @@ This list may be expired after a certain number of blocks / epochs, but it's imp
 ## Test Cases
 
 ```go
+{% raw %}
 // block represents a single block signed by a parcitular account, where
 // the account may or may not have cast a Clique vote.
 type block struct {
@@ -464,6 +467,7 @@ tests := []struct {
     failure: errRecentlySigned,
   },,
 }
+{% endraw %}
 ```
 
 ## Implementation
