Add discussions-to header to ECIP-1047

--- a/ECIPs/ECIP-1047.md
+++ b/ECIPs/ECIP-1047.md
@@ -6,6 +6,7 @@
     Status: Draft
     Type: Informational
     Created: 2019/1/3
+    discussions-to: https://github.com/ethereumclassic/ECIPs/issues/14
     
 ## Abstract
 
