--- a/_ecips/ECIP-1000.md
+++ b/_ecips/ECIP-1000.md
@@ -1,5 +1,5 @@
-<pre>
-  ECIP: 2
+---
+  ECIP: 1000
   Title: ECIP process
   Author: Wei Tang <hi@that.world>
   Comments-Summary: No comments yet.
@@ -8,9 +8,9 @@
   Type: Process
   Created: 2017-06-29
   License: Apache-2
-</pre>
+---
 
-==Abstract==
+## Abstract
 
 An Ethereum Classic Improvement Proposal (ECIP) is a design document providing information to the Ethereum Classic community, or describing a new feature for Ethereum Classic or its processes or environment. The ECIP should provide a concise technical specification of the feature and a rationale for the feature.
 
@@ -18,23 +18,23 @@ We intend ECIPs to be the primary mechanisms for proposing new features, for col
 
 Because the ECIPs are maintained as text files in a versioned repository, their revision history is the historical record of the feature proposal.
 
-==Copyright==
+## Copyright
 
 This ECIP is licensed Apache-2, originally by Luke Dashjr <luke+ECIP@dashjr.org> under BSD 2-clause license.
 
-==ECIP workflow==
+## ECIP workflow
 
 The ECIP process begins with a new idea for Ethereum Classic. Each potential ECIP must have a champion -- someone who writes the ECIP using the style and format described below, shepherds the discussions in the appropriate forums, and attempts to build community consensus around the idea. The ECIP champion (a.k.a. Author) should first attempt to ascertain whether the idea is ECIP-able.
 Small enhancements or patches to a particular piece of software often don't require standardisation between multiple projects; these don't need an ECIP and should be injected into the relevant project-specific development workflow with a patch submission to the applicable issue tracker.
 Additionally, many ideas have been brought forward for changing Ethereum Classic that have been rejected for various reasons.
 The first step should be to search past discussions to see if an idea has been considered before, and if so, what issues arose in its progression.
-After investigating past work, the best way to proceed is by posting about the new idea to the [https://ethereumclassic.slack.com Ethereum Classic Slack Channel].
+After investigating past work, the best way to proceed is by posting about the new idea to the [https://ethereumclassic.slack.com](Ethereum Classic Slack Channel).
 
 Vetting an idea publicly before going as far as writing a ECIP is meant to save both the potential author and the wider community time.
 Asking the Ethereum Classic community first if an idea is original helps prevent too much time being spent on something that is guaranteed to be rejected based on prior discussions (searching the internet does not always do the trick).
 It also helps to make sure the idea is applicable to the entire community and not just the author. Just because an idea sounds good to the author does not mean it will work for most people in most areas where Ethereum Classic is used.
 
-Once the champion has asked the Ethereum Classic community as to whether an idea has any chance of acceptance, a draft ECIP should be submitted to the [https://github.com/ethereumproject/ECIPs ECIPs git repository] as a pull request. This gives the author a chance to flesh out the draft ECIP to make it properly formatted, of high quality, and to address additional concerns about the proposal. This draft must be written in ECIP style as described below, and named with an alias such as "ecip-johndoe-infinitebitcoins" until the editor has assigned it a ECIP number (authors MUST NOT self-assign ECIP numbers).
+Once the champion has asked the Ethereum Classic community as to whether an idea has any chance of acceptance, a draft ECIP should be submitted to the [https://github.com/ethereumproject/ECIPs](ECIPs git repository) as a pull request. This gives the author a chance to flesh out the draft ECIP to make it properly formatted, of high quality, and to address additional concerns about the proposal. This draft must be written in ECIP style as described below, and named with an alias such as "ecip-johndoe-infinitebitcoins" until the editor has assigned it a ECIP number (authors MUST NOT self-assign ECIP numbers).
 
 ECIP authors are responsible for collecting community feedback on both the initial idea and the ECIP before submitting it for review. However, wherever possible, long open-ended discussions on public mailing lists should be avoided. Strategies to keep the discussions efficient include: setting up a separate SIG mailing list for the topic, having the ECIP author accept private comments in the early design phases, setting up a wiki page or git repository, etc. ECIP authors should use their discretion here.
 
@@ -50,19 +50,19 @@ The proposed implementation, if applicable, must be solid and must not complicat
 
 The ECIP author may update the draft as necessary in the git repository. Updates to drafts should also be submitted by the author as pull requests.
 
-===Transferring ECIP Ownership===
+### Transferring ECIP Ownership
 
 It occasionally becomes necessary to transfer ownership of ECIPs to a new champion. In general, we'd like to retain the original author as a co-author of the transferred ECIP, but that's really up to the original author. A good reason to transfer ownership is because the original author no longer has the time or interest in updating it or following through with the ECIP process, or has fallen off the face of the 'net (i.e. is unreachable or not responding to email). A bad reason to transfer ownership is because you don't agree with the direction of the ECIP. We try to build consensus around a ECIP, but if that's not possible, you can always submit a competing ECIP.
 
 If you are interested in assuming ownership of a ECIP, send a message asking to take over, addressed to both the original author and the ECIP editor. If the original author doesn't respond to email in a timely manner, the ECIP editor will make a unilateral decision (it's not like such decisions can't be reversed :).
 
-===ECIP Editors===
+### ECIP Editors
 
 To be added.
 
-===ECIP Editor Responsibilities & Workflow===
+### ECIP Editor Responsibilities & Workflow
 
-For each new ECIP it should first be submitted as a "pull request" to the [https://github.com/ethereumproject/ECIPs ECIPs git repository] that comes in an editor does the following:
+For each new ECIP it should first be submitted as a "pull request" to the [https://github.com/ethereumproject/ECIPs](ECIPs git repository) that comes in an editor does the following:
 
 * Read the ECIP to check if it is ready: sound and complete. The ideas must make technical sense, even if they don't seem likely to be accepted.
 * The title should accurately describe the content.
@@ -80,9 +80,9 @@ Once the ECIP is ready, the ECIP editor will:
 
 The ECIP editors are intended to fulfill administrative and editorial responsibilities. The ECIP editors monitor ECIP changes, and update ECIP headers as appropriate.
 
-==ECIP format and structure==
+## ECIP format and structure
 
-===Specification===
+### Specification
 
 ECIPs should be written in mediawiki or markdown format.
 
@@ -97,7 +97,7 @@ Each ECIP should have the following parts:
 * Backwards compatibility -- All ECIPs that introduce backwards incompatibilities must include a section describing these incompatibilities and their severity. The ECIP must explain how the author proposes to deal with these incompatibilities.
 * Reference implementation -- The reference implementation must be completed before any ECIP is given status "Final", but it need not be completed before the ECIP is accepted. It is better to finish the specification and rationale first and reach consensus on it before writing code. The final implementation must include test code and documentation appropriate for the Ethereum Classic protocol.
 
-====ECIP header preamble====
+#### ECIP header preamble
 
 Each ECIP must begin with an RFC 822 style header preamble. The headers must appear in the following order. Headers marked with "*" are optional and are described below. All other headers are required.
 
@@ -137,11 +137,11 @@ ECIPs may have a Requires header, indicating the ECIP numbers that this ECIP dep
 
 ECIPs may also have a Superseded-By header indicating that a ECIP has been rendered obsolete by a later document; the value is the number of the ECIP that replaces the current document. The newer ECIP must have a Replaces header containing the number of the ECIP that it rendered obsolete.
 
-====Auxiliary Files====
+#### Auxiliary Files
 
 ECIPs may include auxiliary files such as diagrams. Auxiliary files should be included in a subdirectory for that ECIP, or must be named ECIP-XXXX-Y.ext, where "XXXX" is the ECIP number, "Y" is a serial number (starting at 1), and "ext" is replaced by the actual file extension (e.g. "png").
 
-==ECIP types==
+## ECIP types
 
 There are three kinds of ECIP:
 
@@ -149,9 +149,9 @@ There are three kinds of ECIP:
 * An Informational ECIP describes a Ethereum Classic design issue, or provides general guidelines or information to the Ethereum Classic community, but does not propose a new feature. Informational ECIPs do not necessarily represent a Ethereum Classic community consensus or recommendation, so users and implementors are free to ignore Informational ECIPs or follow their advice.
 * A Process ECIP describes a process surrounding Ethereum Classic, or proposes a change to (or an event in) a process. Process ECIPs are like Standards Track ECIPs but apply to areas other than the Ethereum Classic protocol itself. They may propose an implementation, but not to Ethereum Classic's codebase; they often require community consensus; unlike Informational ECIPs, they are more than recommendations, and users are typically not free to ignore them. Examples include procedures, guidelines, changes to the decision-making process, and changes to the tools or environment used in Ethereum Classic development. Any meta-ECIP is also considered a Process ECIP.
 
-==ECIP status field==
+## ECIP status field
 
-===Specification===
+### Specification
 
 The typical paths of the status of ECIPs are as follows:
 
@@ -170,17 +170,17 @@ When a Final ECIP is no longer relevant, its status may be changed to Replaced o
 
 A process ECIP may change status from Draft to Active when it achieves rough consensus on the mailing list. Such a proposal is said to have rough consensus if it has been open to discussion on the development mailing list for at least one month, and no person maintains any unaddressed substantiated objections to it. Addressed or obstructive objections may be ignored/overruled by general agreement that they have been sufficiently addressed, but clear reasoning must be given in such circumstances.
 
-====Progression to Final status====
+#### Progression to Final status
 
 Peer services ECIPs should be observed to be adopted by at least 1% of public listening nodes for one month.
 
 API/RPC and application layer ECIPs must be implemented by at least two independent and compatible software applications.
 
-Software authors are encouraged to publish summaries of what ECIPs their software supports to aid in verification of status changes. Good examples of this at the time of writing this ECIP, can be observed in [https://github.com/bitcoin/bitcoin/blob/master/doc/BIPs.md Bitcoin Core's doc/BIPs.md file] as well as [https://github.com/schildbach/bitcoin-wallet/blob/master/wallet/README.specs Bitcoin Wallet for Android's wallet/README.specs file].
+Software authors are encouraged to publish summaries of what ECIPs their software supports to aid in verification of status changes. Good examples of this at the time of writing this ECIP, can be observed in [https://github.com/bitcoin/bitcoin/blob/master/doc/BIPs.md](Bitcoin Core's doc/BIPs.md file) as well as [https://github.com/schildbach/bitcoin-wallet/blob/master/wallet/README.specs](Bitcoin Wallet for Android's wallet/README.specs file).
 
 These criteria are considered objective ways to observe the de facto adoption of the ECIP, and are not to be used as reasons to oppose or reject a ECIP. Should a ECIP become actually and unambiguously adopted despite not meeting the criteria outlined here, it should still be updated to Final status.
 
-===Rationale===
+### Rationale
 
 Why is this necessary at all?
 
@@ -199,9 +199,9 @@ What if a ECIP is proposed that only makes sense for a single specific project?
 
 * The ECIP process exists for standardisation between independent projects. If something only affects one project, it should be done through that project's own internal processes, and never be proposed as a ECIP in the first place.
 
-==ECIP comments==
+## ECIP comments
 
-===Specification===
+### Specification
 
 Each ECIP should, in its preamble, link to a public wiki page with a summary tone of the comments on that page.
 Reviewers of the ECIP who consider themselves qualified, should post their own comments on this wiki page.
@@ -239,7 +239,7 @@ These fields must follow the "Discussions-To" header defined in ECIP 1 (if that 
 
 To avoid doubt: comments and status are unrelated metrics to judge a ECIP, and neither should be directly influencing the other.
 
-===Rationale===
+### Rationale
 
 What is the purpose of ECIP comments?
 
@@ -249,9 +249,9 @@ Will ECIP comments be censored or limited to particular participants/"experts"?
 
 * Participants should freely refrain from commenting outside of their area of knowledge or expertise. However, comments should not be censored, and participation should be open to the public.
 
-==ECIP licensing==
+## ECIP licensing
 
-===Specification===
+### Specification
 
 New ECIPs may be accepted with the following licenses. Each new ECIP must identify at least one acceptable license in its preamble. The License header in the preamble must be placed after the Created header. Each license must be referenced by their respective abbreviation given below.
 
@@ -284,34 +284,34 @@ In the event that the licensing for the text or code is too complicated to expre
 ECIPs are not required to be *exclusively* licensed under approved terms, and may also be licensed under unacceptable licenses *in addition to* at least one acceptable license.
 In this case, only the acceptable license(s) should be listed in the License and License-Code headers.
 
-====Recommended licenses====
+#### Recommended licenses
 
-* Apache-2.0: [http://www.apache.org/licenses/LICENSE-2.0 Apache License, version 2.0]
-* BSD-2-Clause: [https://opensource.org/licenses/BSD-2-Clause OSI-approved BSD 2-clause license]
-* BSD-3-Clause: [https://opensource.org/licenses/BSD-3-Clause OSI-approved BSD 3-clause license]
-* CC0-1.0: [https://creativecommons.org/publicdomain/zero/1.0/ Creative Commons CC0 1.0 Universal]
-* GNU-All-Permissive: [http://www.gnu.org/prep/maintain/html_node/License-Notices-for-Other-Files.html GNU All-Permissive License]
+* Apache-2.0: [http://www.apache.org/licenses/LICENSE-2.0](Apache License, version 2.0)
+* BSD-2-Clause: [https://opensource.org/licenses/BSD-2-Clause](OSI-approved BSD 2-clause license)
+* BSD-3-Clause: [https://opensource.org/licenses/BSD-3-Clause](OSI-approved BSD 3-clause license)
+* CC0-1.0: [https://creativecommons.org/publicdomain/zero/1.0/](Creative Commons CC0 1.0 Universal)
+* GNU-All-Permissive: [http://www.gnu.org/prep/maintain/html_node/License-Notices-for-Other-Files.html](GNU All-Permissive License)
 
 In addition, it is recommended that literal code included in the ECIP be dual-licensed under the same license terms as the project it modifies. For example, literal code intended for Ethereum Classic Core would ideally be dual-licensed under the MIT license terms as well as one of the above with the rest of the ECIP text.
 
-====Not recommended, but acceptable licenses====
+#### Not recommended, but acceptable licenses
 
-* BSL-1.0: [http://www.boost.org/LICENSE_1_0.txt Boost Software License, version 1.0]
-* CC-BY-4.0: [https://creativecommons.org/licenses/by/4.0/ Creative Commons Attribution 4.0 International]
-* CC-BY-SA-4.0: [https://creativecommons.org/licenses/by-sa/4.0/ Creative Commons Attribution-ShareAlike 4.0 International]
-* MIT: [https://opensource.org/licenses/MIT Expat/MIT/X11 license]
-* AGPL-3.0+: [http://www.gnu.org/licenses/agpl-3.0.en.html GNU Affero General Public License (AGPL), version 3 or newer]
-* FDL-1.3: [http://www.gnu.org/licenses/fdl-1.3.en.html GNU Free Documentation License, version 1.3]
-* GPL-2.0+: [http://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html GNU General Public License (GPL), version 2 or newer]
-* LGPL-2.1+: [http://www.gnu.org/licenses/old-licenses/lgpl-2.1.en.html GNU Lesser General Public License (LGPL), version 2.1 or newer]
+* BSL-1.0: [http://www.boost.org/LICENSE_1_0.txt](Boost Software License, version 1.0)
+* CC-BY-4.0: [https://creativecommons.org/licenses/by/4.0/](Creative Commons Attribution 4.0 International)
+* CC-BY-SA-4.0: [https://creativecommons.org/licenses/by-sa/4.0/](Creative Commons Attribution-ShareAlike 4.0 International)
+* MIT: [https://opensource.org/licenses/MIT](Expat/MIT/X11 license)
+* AGPL-3.0+: [http://www.gnu.org/licenses/agpl-3.0.en.html](GNU Affero General Public License (AGPL), version 3 or newer)
+* FDL-1.3: [http://www.gnu.org/licenses/fdl-1.3.en.html](GNU Free Documentation License, version 1.3)
+* GPL-2.0+: [http://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html](GNU General Public License (GPL), version 2 or newer)
+* LGPL-2.1+: [http://www.gnu.org/licenses/old-licenses/lgpl-2.1.en.html](GNU Lesser General Public License (LGPL), version 2.1 or newer)
 
-===Rationale===
+### Rationale
 
 Why are there software licenses included?
 
 * Some ECIPs, especially consensus layer, may include literal code in the ECIP itself which may not be available under the exact license terms of the ECIP.
 * Despite this, not all software licenses would be acceptable for content included in ECIPs.
 
-==See Also==
+## See Also
 
-* [https://tools.ietf.org/html/rfc7282 RFC 7282: On Consensus and Humming in the IETF]
+* [https://tools.ietf.org/html/rfc7282](RFC 7282: On Consensus and Humming in the IETF)
