Initial header cleanup. Not final

--- a/_ecips/ECIP-1043.md
+++ b/_ecips/ECIP-1043.md
@@ -1,13 +1,14 @@
-```
-ECIP: 
-    Title: Fixed DAG limit restriction 
-    Author: Cody Burns <cody.w.burns@gmail.com>
-    Status: Draft
-    Type: Standard
-    Created: 2018-04-16
- ```   
+---
+ECIP: 1043
+Title: Fixed DAG limit restriction 
+Author: Cody Burns <cody.w.burns@gmail.com>
+Status: Draft
+Type: Standard
+Created: 2018-04-16
+---
+
 # ECIP-1043 – Fixed DAG limit restriction   
-    
+
 ## Abstract
 The purpose of this ECIP is to set a limit on the maximum size of the DAG to its initial state and no longer increase it on an epoch schedule
 
